<resources>
    <string name="app_name">FlightDataApplication</string>
    <string name="aircraft">Aircraft</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="flight_plan">Flight Plan</string>
    <string name="button">Button</string>
    <string name="Departure_Gate_parking">Departure Gate/Parking</string>
    <string name="Arrival_Gate_parking">Arrival Gate/Parking</string>
    <string name="cruise_altitude">Cruise Altitude</string>
    <string name="estimated_flight_time">Estimated Flight Time</string>
    <string name="departure_fuel_in_gal">Departure Fuel (in gal)</string>
    <string name="_4000">4000</string>
    <string name="hh_mm_ss">HH:mm:ss</string>
    <string name="egcc">EGCC</string>
    <string name="destination_airport">Destination Airport</string>
    <string name="departure_airport">Departure Airport</string>
    <string name="kmsp">KMSP</string>
    <string name="estimated_trip_distance_in_nm">Estimated Trip Distance (in nm)</string>
    <string name="_300">300</string>
    <string name="_12000">12000</string>
    <string name="e22">E22</string>
    <string name="_2300">2300</string>
    <string name="fuel_weight_in_lb">Fuel Weight (in lb)</string>
    <string name="_3200">3200</string>
    <string name="gross_weight_in_lb">Gross Weight (in lb)</string>
    <string name="payload_weight_in_lb">Payload Weight (in lb)</string>
    <string name="_4500">4500</string>
    <string name="runway">Runway</string>
    <string name="_31l">31L</string>
    <string name="climb_speed_in_kts">Climb Speed (in kts)</string>
    <string name="_250">250</string>
    <string name="cruise_speed_in_kts">Cruise Speed (in kts)</string>
    <string name="_280">280</string>
    <string name="departure_time_local_time">Departure Time (Local time)</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="_12">12</string>
    <string name="arrival_runway">Arrival Runway</string>
    <string name="_6r">6R</string>
    <string name="actual_departure_time">Actual Departure Time</string>
    <string name="actual_arrival_time">Actual Arrival Time</string>
    <string name="fuel_left">Fuel Left (in gal)</string>
    <string name="_000">000</string>
    <string name="fuel_used">Fuel Used (in gal)</string>
    <string name="total_triptime">Total TripTime</string>
    <string name="total_trip_distance_in_nm">Total Trip Distance (in nm)</string>
    <string name="arrival_gate_parking">Arrival Gate/Parking</string>
    <string name="e34">E34</string>
    <string name="edit">Edit</string>
    <string name="add_location">Add Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="add">Add</string>
</resources>
